[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowform"
version = "0.0.1"
authors = [
  { name="Elena" },
]

description = "Flowform is a declarative configuration language for your data pipelines"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tmpElena/catalyst"